5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4413/executions/1635_1055.log
== TEST (2019-04-10 14:03:57) 
-- CODE:
v0= int(input("velocidade: "))
a=int(input("angulo: "))
g = 9.8 
R = (v0**2)*sin(2a)/g
print(R)
-- ERROR:
File "XXXX", line 4
    R = (v0**2)*sin(2a)/g
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:04:07) 
-- CODE:
v0= int(input("velocidade: "))
a=int(input("angulo: "))
g = 9.8 
R = (v0**2)*sn(2a)/g
print(R)
-- ERROR:
File "XXXX", line 4
    R = (v0**2)*sn(2a)/g
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:04:19) 
-- CODE:
v0= int(input("velocidade: "))
a=int(input("angulo: "))
g = 9.8 
R = (v0**2)*(sin2a)/g
print(R)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v0= int(input())
ValueError: invalid literal for int() with base 10: '10.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:04:40) 
-- CODE:
v0= int(input("velocidade: "))
a=int(input("angulo: "))
g = 9.8 
R = (v0**2)*(sin(2a)/g
print(R)
-- ERROR:
File "XXXX", line 4
    R = (v0**2)*(sin(2a)/g
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:05:28) 
-- CODE:
v0= int(input("velocidade: "))
a=int(input("angulo: "))
g = 9.8 
R = (v0**2)*(sin(2a))/g
print(R)
-- ERROR:
File "XXXX", line 4
    R = (v0**2)*(sin(2a))/g
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:07:32) 
-- CODE:
from math import*
v0= int(input("velocidade: "))
a=int(input("angulo: "))
g = 9.8 
R = (v0**2)*(sin(2a))/g
print(R)
-- ERROR:
File "XXXX", line 5
    R = (v0**2)*(sin(2a))/g
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:08:28) 
-- CODE:
from math import*
v0= int(input("velocidade: "))
a=int(input("angulo: "))
g = 9.8 
R = (v0**2)*(sin(2*a))/g
print(R)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v0= int(input())
ValueError: invalid literal for int() with base 10: '10.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:21:34) 
-- CODE:
from math import*
v0= int(input("velocidade: "))
a=int(input("angulo: "))
g=9.8
R = (v0**2)*(sin(2*a))/2
print(R)
print(radians(R))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v0= int(input())
ValueError: invalid literal for int() with base 10: '10.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:21:50) 
-- CODE:
from math import*
v0= float(input("velocidade: "))
a=int(input("angulo: "))
g=9.8
R = (v0**2)*(sin(2*a))/2
print(R)
print(radians(R))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a=int(input())
ValueError: invalid literal for int() with base 10: '45.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:22:33) 
-- CODE:
from math import*
v0= float(input("velocidade: "))
a=int(input("angulo: "))
g=9.8
R = (v0**2)*(sin(2*a))/2
print(R)
print(abs(R))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a=int(input())
ValueError: invalid literal for int() with base 10: '45.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:22:53) 
-- CODE:
from math import*
v0= float(input("velocidade: "))
a=int(input("angulo: "))
g=9.8
R = (v0**2)*(sin(2*a))/2
print(R)
print(radians(R))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a=int(input())
ValueError: invalid literal for int() with base 10: '45.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:27:29) 
-- CODE:
from math import*
v0= float(input("velocidade: "))
a=int(input("angulo: "))
g=9.8
D = float(input"distancia: ")
R = (v0**2)*(sin(2*a))/2
if(D<=R):
	msg = "sim"
else:
	msg = "nao"
print(msg)

-- EXECUTION TIME:
0.190409
-- ERROR:
  File "/home/codebench/codes/1635/1055/main.py", line 5
    D = float(input"distancia: ")
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:28:26) 
-- CODE:
from math import*
v0= float(input("velocidade: "))
a=int(input("angulo: "))
g=9.8
D = float(input"distancia: ")
R = (v0**2)*(radians(sin(2*a)))/2
if(D<=R):
	msg = "sim"
else:
	msg = "nao"
print(msg)

-- EXECUTION TIME:
0.110642
-- ERROR:
  File "/home/codebench/codes/1635/1055/main.py", line 5
    D = float(input"distancia: ")
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:28:39) 
-- CODE:
from math import*
v0= float(input("velocidade: "))
a=int(input("angulo: "))
g=9.8
D = float(input"distancia: ")
R = (v0**2)*(sin(radians(2*a)))/2
if(D<=R):
	msg = "sim"
else:
	msg = "nao"
print(msg)

-- EXECUTION TIME:
0.181193
-- ERROR:
  File "/home/codebench/codes/1635/1055/main.py", line 5
    D = float(input"distancia: ")
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:29:01) 
-- CODE:
from math import*
v0= float(input("velocidade: "))
a=int(input("angulo: "))
g=9.8
D = float(input"distancia: ")
R = (v0**2)*(sin(2*a))/2
if(D<=R):
	msg = "sim"
else:
	msg = "nao"
print(msg)

-- ERROR:
File "XXXX", line 5
    D = float(input"distancia: ")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:29:21) 
-- CODE:
from math import*
v0= float(input("velocidade: "))
a=int(input("angulo: "))
g=9.8
D = abs((input"distancia: "))
R = (v0**2)*(sin(2*a))/2
if(D<=R):
	msg = "sim"
else:
	msg = "nao"
print(msg)

-- ERROR:
File "XXXX", line 5
    D = abs((input"distancia: "))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:29:34) 
-- CODE:
from math import*
v0= float(input("velocidade: "))
a=int(input("angulo: "))
g=9.8
D = abs(float((input"distancia: ")))
R = (v0**2)*(sin(2*a))/2
if(D<=R):
	msg = "sim"
else:
	msg = "nao"
print(msg)

-- ERROR:
File "XXXX", line 5
    D = abs(float((input"distancia: ")))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:57:43) 
-- CODE:
from math import*
v0= float(input("velocidade: "))
a= radians(float(input("angulo: ")))
g=9.8
D =(float((input"distancia: "))
R = (v0**2)*(sin(2*a))/2
if(D<=R):
	msg = "sim"
else:
	msg = "nao"
print(msg)

-- EXECUTION TIME:
0.2183
-- ERROR:
  File "/home/codebench/codes/1635/1055/main.py", line 5
    D =(float((input"distancia: "))
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:57:46) 
-- CODE:
from math import*
v0= float(input("velocidade: "))
a= radians(float(input("angulo: ")))
g=9.8
D =(float((input"distancia: "))
R = (v0**2)*(sin(2*a))/2
if(D<=R):
	msg = "sim"
else:
	msg = "nao"
print(msg)

-- EXECUTION TIME:
0.207252
-- ERROR:
  File "/home/codebench/codes/1635/1055/main.py", line 5
    D =(float((input"distancia: "))
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
